k8s/todoapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
spec:
  selector:
    app: todoapp
  ports:
    - name: http-backend
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: http-frontend
      protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: hilmiemel/todoapp-new:latest
          ports:
            - containerPort: 3000
            - containerPort: 8000
